--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,17 @@ html, body {
     cursor: pointer;
 }
 
+#start-button-img{
+    width: 200px;
+    height: auto;
+}
+
+#start-button-img:hover{
+    transform: scale(1.1);
+    transition: transform 0.3s;
+    
+}
+
 @keyframes rotate360 {
     from { transform: rotate(0deg); }
     to { transform: rotate(360deg); }
@@ -81,16 +92,4 @@ html, body {
     display:flex;
     justify-content: center;
     align-items: center;
-}
-
-#sauce {
-    z-index: 3;
-}
-
-#cheese {
-    z-index: 4;
-}
-
-#topping-1{
-    z-index: 5;
 }
